Fix <p> line-height in Questions.css + the size of text and backgrounds of the slider in index.html and put an overflow-x: hidden on the html

--- a/css/Questions.css
+++ b/css/Questions.css
@@ -5,6 +5,7 @@ h2{
 p{
     font-size: 20px;
     padding: 3px 3px 3px 3px;
+    line-height: 30px;
 }
 
 
