--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 html {
+    overflow-x: hidden;
     margin: 0;
     font-family: system-ui;
 }
@@ -200,6 +201,7 @@ header {
  */
 #menu-burger input:checked ~ ul {
     transform: none;
+    display: block;
 }
 
 /*fin du menu burger*/
@@ -233,7 +235,7 @@ header {
     left: 18vw;
     width: 51vw;
     height: 7vh;
-    padding: 0 15vw 16vh 4vw;
+    padding: 0 12vw 18vh 4vw;
     background-color: rgba(255, 255, 255, .3);
     gap: 0;
 
@@ -277,7 +279,7 @@ header {
     left: 18vw;
     width: 49vw;
     height: 7vh;
-    padding: 1vw 15vw 16vh 4vw;
+    padding: 1vw 14vw 20vh 4vw;
     background-color: rgba(255, 255, 255, .3);
     gap: 0;
 
@@ -286,7 +288,7 @@ header {
 #text-malinois h1 {
     font-size: 26px;
     padding-right: 20vw;
-    margin: 6vh -35vw -1vh 0;
+    margin: 2vh -35vw -1vh 0;
 
 }
 
@@ -321,7 +323,7 @@ header {
     left: 18vw;
     width: 52vw;
     height: 7vh;
-    padding: 1vw 15vw 16vh 4vw;
+    padding: 1vw 14vw 18vh 4vw;
     background-color: rgba(255, 255, 255, .3);
     gap: 0;
 
